# sotest-interpreter.c

./: .clangd  .gitignore  CMakeLists.txt  QWEN.md  README.md  test.sc  test_task.md
examples/: comments.sc  complex.sc  error_handling.sc  errors.sc  library_comparison.sc  multiple.sc  simple.sc
src/: args.c  args.h  interpreter.c  interpreter.h  main.c  parse.c  parse.h  str.c  str.h
src/test-libraries/: test-lib1.c  test-lib2.c
tests/: executor.c  parsing.c
tests/libraries/: test-lib1.c  test-lib2.c
tests/libtest/: macros.h  main.c  tests.c  tests.h
